[package]
name = "Ratatoskr"
description = ""
version = "0.1.0"
edition = "2024" 
license = "GPL-3.0-only"
license-file = "LICENSE"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
mysql = { version = "26", features = ["chrono"] }
uuid = { version = "1", features = ["v7","v4","serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json","rustls-tls"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
rust_decimal = { version = "1", features = ["serde"] }
anyhow = "1"
ropey = "1.6"                 
unicode-segmentation = "1.11"
signal-hook = "0.3"